--- a/jTable/templates/head.html
+++ b/jTable/templates/head.html
@@ -13,5 +13,7 @@
 <meta name="theme-color" content="#ffffff" />
 <title>{{.Title}}</title>
 <!-- Bootstrap CSS -->
-<link rel="stylesheet" href="/public/css/bootstrap.css"> 
+<link rel="stylesheet" type="text/css" href="/public/css/bootstrap.min.css"/>
+<!-- dataTables CSS -->
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs-3.3.6/dt-1.10.12/b-1.2.2/b-html5-1.2.2/r-2.1.0/datatables.min.css"/>
 {{end}}
