--- a/DataTables/templates/head.html
+++ b/DataTables/templates/head.html
@@ -3,16 +3,18 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<link rel="apple-touch-icon" sizes="180x180" href="/public/favicons/apple-touch-icon.png" />
-<link rel="icon" type="image/png" href="/public/favicons/favicon-32x32.png" sizes="32x32" />
-<link rel="icon" type="image/png" href="/public/favicons/favicon-16x16.png" sizes="16x16" />
-<link rel="manifest" href="/public/favicons/manifest.json" />
-<link rel="mask-icon" href="/public/favicons/safari-pinned-tab.svg" color="#5bbad5" />
-<link rel="shortcut icon" href="/public/favicons/favicon.ico" />
-<meta name="msapplication-config" content="/public/favicons/browserconfig.xml" />
-<meta name="theme-color" content="#ffffff" />
+<link rel="apple-touch-icon" sizes="180x180" href="/public/favicons/apple-touch-icon.png"/>
+<link rel="icon" type="image/png" href="/public/favicons/favicon-32x32.png" sizes="32x32"/>
+<link rel="icon" type="image/png" href="/public/favicons/favicon-16x16.png" sizes="16x16"/>
+<link rel="manifest" href="/public/favicons/manifest.json"/>
+<link rel="mask-icon" href="/public/favicons/safari-pinned-tab.svg" color="#5bbad5"/>
+<link rel="shortcut icon" href="/public/favicons/favicon.ico"/>
+<meta name="msapplication-config" content="/public/favicons/browserconfig.xml"/>
+<meta name="theme-color" content="#ffffff"/>
 <title>{{.Title}}</title>
 <!-- Bootstrap CSS -->
-<link rel="stylesheet" type="text/css" href="/public/css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" href="/public/css/bootstrap.min.css"/>
 <!-- dataTables CSS -->
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs-3.3.6/dt-1.10.12/b-1.2.2/b-html5-1.2.2/r-2.1.0/datatables.min.css" /> {{end}}
+<link rel="stylesheet" type="text/css"
+      href="https://cdn.datatables.net/v/bs-3.3.6/jszip-2.5.0/pdfmake-0.1.18/dt-1.10.12/b-1.2.2/b-flash-1.2.2/b-html5-1.2.2/b-print-1.2.2/r-2.1.0/datatables.min.css"/>
+{{end}}
