--- a/DataTables/templates/index.html
+++ b/DataTables/templates/index.html
@@ -1,5 +1,4 @@
 {{define "index"}}
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,45 +6,122 @@
 </head>
 
 <body>
-    {{template "navbar" .}}
-    <div class="container-fluid">
-        <table id="tbl" class="table table-striped table-bordered" cellspacing="0" width="100%">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Name</th>
-                    <th>Age</th>
-                </tr>
-            </thead>
-        </table>
+{{template "navbar" .}}
+<div class="container-fluid">
+    <table id="tbl" class="table table-striped table-bordered" cellspacing="0" width="100%">
+        <thead>
+        <tr>
+            <th>#</th>
+            <th>Name</th>
+            <th>Age</th>
+            <th></th>
+            <th></th>
+        </tr>
+        </thead>
+    </table>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="editModalLabel">New message</h4>
+            </div>
+            <div class="modal-body">
+                <form id="editForm">
+                    <input type="hidden" name="id" id="id">
+                    <div class="form-group">
+                        <label for="name" class="control-label">Name:</label>
+                        <input type="text" class="form-control" name="name" id="name">
+                    </div>
+                    <div class="form-group">
+                        <label for="age" class="control-label">Age:</label>
+                        <input type="text" class="form-control" name="age" id="age">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="editModalAction()">Save</button>
+            </div>
+        </div>
     </div>
-    {{template "bodyIncludes" .}}
-    <script>
-        $(document).ready(function() {
-            $('#tbl').DataTable({
-                dom: 'Bfrtip',
-                buttons: [
-                    'copy', 'excel', 'pdf'
-                ],
-                responsive: true,
-                "ajax": {
-                    "url": "/table/list",
-                    "type": "POST",
-                    "dataSrc": function(json) {
-                        var parsed = JSON.parse(json);
-                        return parsed;
-                    }
-                },
-                "columns": [{
-                    "data": "id"
-                }, {
-                    "data": "name"
-                }, {
-                    "data": "age"
-                }]
-            });
+</div>
+
+{{template "bodyIncludes" .}}
+<script>
+    $(document).ready(function () {
+        // Invoke Buttons plugin (Bfrtip...)
+        $.extend($.fn.dataTable.defaults, {
+            dom: 'Bfrtip'
         });
-    </script>
+
+        var table = $('#tbl').DataTable({
+            buttons: [
+                'copy', 'csv', 'excel', 'pdf', 'print'
+            ],
+            responsive: true,
+            "ajax": {
+                "url": "/table/list",
+                "type": "POST",
+                "dataSrc": function (json) {
+                    return JSON.parse(json);
+                }
+            },
+            "columnDefs": [{
+                "targets": [3, 4],
+                "searchable": false,
+                "orderable": false
+            }],
+            "columns": [{
+                "data": "id"
+            }, {
+                "data": "name"
+            }, {
+                "data": "age"
+            }, {
+                "data": null,
+                "width": "1%",
+                mRender: function (data, type, row) {
+                    return '<button type="button" class="btn btn-warning" data-toggle="modal" data-target="#editModal" data-name="' + row.name + '" data-age="' + row.age + '"  data-id="' + row.id + '" id="edit">Edit</button>'
+                }
+            }, {
+                "data": null,
+                "width": "1%",
+                mRender: function (data, type, row) {
+                    return '<button type="button" class="btn btn-danger">Delete</button>'
+                }
+            }
+            ]
+        });
+        $('#editModal').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget); // Button that triggered the modal
+            var name = button.data('name');
+            var age = button.data('age');
+            var id = button.data('id');
+            var modal = $(this);
+            modal.find('.modal-title').text('Edit ' + name);
+            $('#name').val(name);
+            $('#age').val(age);
+            $('#id').val(id);
+        })
+    });
+    function editModalAction() {
+        $.ajax({
+            type: "POST",
+            url: "/table/edit",
+            data: $("#editForm").serialize(),
+            success: function (res) {
+                alert(res);
+                $('#editModal').modal('toggle');
+            }
+        });
+        return false
+    }
+</script>
 </body>
 
 </html>
