--- a/GoBooks/templates/navbar.html
+++ b/GoBooks/templates/navbar.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand" href="/">Gophr</a>
     <ul class="nav navbar-nav">
         <li class="nav-item">
-            <a class="nav-link {{if eq .Active " register " }}active{{end}}" href="/register">Register</a>
+            <a class='nav-link {{if eq .Active " register " }}active{{end}}' href="/register">Register</a>
         </li>
     </ul>
     <form id="search-form" onsubmit="return false" class="form-inline float-xs-right">
