--- a/DataTables/templates/bodyIncludes.html
+++ b/DataTables/templates/bodyIncludes.html
@@ -2,4 +2,5 @@
 <script type="text/javascript" src="/public/js/jquery.min.js"></script>
 <script type="text/javascript"
         src="https://cdn.datatables.net/v/bs-3.3.6/jszip-2.5.0/pdfmake-0.1.18/dt-1.10.12/b-1.2.2/b-flash-1.2.2/b-html5-1.2.2/b-print-1.2.2/r-2.1.0/datatables.min.js"></script>
+<script type="text/javascript" src="/public/js/bootbox.min.js"></script>
 {{end}}
