--- a/DataTables/templates/index.html
+++ b/DataTables/templates/index.html
@@ -21,14 +21,14 @@
     </table>
 </div>
 
-<!-- Modal -->
+<!-- editModal -->
 <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                         aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="editModalLabel">New message</h4>
+                <h4 class="modal-title" id="editModalLabel">Edit</h4>
             </div>
             <div class="modal-body">
                 <form id="editForm">
@@ -39,13 +39,43 @@
                     </div>
                     <div class="form-group">
                         <label for="age" class="control-label">Age:</label>
-                        <input type="text" class="form-control" name="age" id="age">
+                        <input type="number" min="0" max="99" class="form-control" name="age" id="age">
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-primary" onclick="editModalAction()">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- newModal -->
+<div class="modal fade" id="newModal" tabindex="-1" role="dialog" aria-labelledby="newModalModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="newModalLabel">Add Record</h4>
+            </div>
+            <div class="modal-body">
+                <form id="newForm">
+                    <input type="hidden" name="id">
+                    <div class="form-group">
+                        <label for="name" class="control-label">Name:</label>
+                        <input type="text" class="form-control" name="name">
+                    </div>
+                    <div class="form-group">
+                        <label for="age" class="control-label">Age:</label>
+                        <input type="number" min="0" max="99" class="form-control" name="age">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="newModalAction()">Add</button>
             </div>
         </div>
     </div>
@@ -60,8 +90,16 @@
         });
 
         var table = $('#tbl').DataTable({
+            destroy: true,
             buttons: [
-                'copy', 'csv', 'excel', 'pdf', 'print'
+                'copy', 'csv', 'excel', 'pdf', 'print',
+                {
+                    text: 'New Record',
+                    action: function () {
+                        $('#newModal').modal('toggle');
+                    }
+                }
+
             ],
             responsive: true,
             "ajax": {
@@ -86,17 +124,18 @@
                 "data": null,
                 "width": "1%",
                 mRender: function (data, type, row) {
-                    return '<button type="button" class="btn btn-warning" data-toggle="modal" data-target="#editModal" data-name="' + row.name + '" data-age="' + row.age + '"  data-id="' + row.id + '" id="edit">Edit</button>'
+                    return '<button type="button" class="btn btn-warning" data-toggle="modal" data-target="#editModal" data-name="' + row.name + '" data-age="' + row.age + '"  data-id="' + row.id + '">Edit</button>'
                 }
             }, {
                 "data": null,
                 "width": "1%",
                 mRender: function (data, type, row) {
-                    return '<button type="button" class="btn btn-danger">Delete</button>'
+                    return '<button type="button" class="btn btn-danger" onclick="deleteModal(' + row.id + ')">Delete</button>'
                 }
             }
             ]
         });
+
         $('#editModal').on('show.bs.modal', function (event) {
             var button = $(event.relatedTarget); // Button that triggered the modal
             var name = button.data('name');
@@ -109,17 +148,71 @@
             $('#id').val(id);
         })
     });
+
     function editModalAction() {
         $.ajax({
             type: "POST",
             url: "/table/edit",
             data: $("#editForm").serialize(),
             success: function (res) {
-                alert(res);
-                $('#editModal').modal('toggle');
+                if (res == "OK") {
+                    $('#editModal').modal('toggle');
+
+                    $('#tbl').dataTable().api().ajax.reload();
+                } else {
+                    alert("An Error Acquired")
+                }
             }
         });
         return false
+    }
+    function newModalAction() {
+        $.ajax({
+            type: "POST",
+            url: "/table/add",
+            data: $("#newForm").serialize(),
+            success: function (res) {
+                if (res == "OK") {
+                    $('#newModal').modal('toggle');
+
+                    $('#tbl').dataTable().api().ajax.reload();
+                } else {
+                    alert("An Error Acquired")
+                }
+            }
+        });
+        return false
+    }
+
+    function deleteModal(id) {
+        bootbox.confirm({
+            size: "small",
+            message: "Are you sure want to delete?",
+            buttons: {
+                cancel: {
+                    label: '<i class="fa fa-times"></i> Cancel'
+                },
+                confirm: {
+                    label: '<i class="fa fa-check"></i> Confirm'
+                }
+            },
+            callback: function (result) {
+                if (result) {
+                    $.ajax({
+                        type: "POST",
+                        url: "/table/delete",
+                        data: {id: id},
+                        success: function (res) {
+                            if (res == "OK") {
+                                $('#tbl').dataTable().api().ajax.reload();
+                            } else {
+                                alert("An Error Acquired")
+                            }
+                        }
+                    });
+                }
+            }
+        })
     }
 </script>
 </body>
