New chat features :)

--- a/DataTables/templates/head.html
+++ b/DataTables/templates/head.html
@@ -1,8 +1,9 @@
 {{define "head"}}
 <!-- Required meta tags always come first -->
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 <link rel="apple-touch-icon" sizes="180x180" href="/public/favicons/apple-touch-icon.png"/>
 <link rel="icon" type="image/png" href="/public/favicons/favicon-32x32.png" sizes="32x32"/>
 <link rel="icon" type="image/png" href="/public/favicons/favicon-16x16.png" sizes="16x16"/>
@@ -12,9 +13,12 @@
 <meta name="msapplication-config" content="/public/favicons/browserconfig.xml"/>
 <meta name="theme-color" content="#ffffff"/>
 <title>{{.Title}}</title>
-<!-- Bootstrap CSS -->
+<!-- Bootstrap -->
 <link rel="stylesheet" type="text/css" href="/public/css/bootstrap.min.css"/>
-<!-- dataTables CSS -->
+<!-- dataTables -->
 <link rel="stylesheet" type="text/css"
       href="https://cdn.datatables.net/v/bs-3.3.6/jszip-2.5.0/pdfmake-0.1.18/dt-1.10.12/b-1.2.2/b-flash-1.2.2/b-html5-1.2.2/b-print-1.2.2/r-2.1.0/datatables.min.css"/>
+<!-- Font Awesome -->
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 {{end}}
