--- a/DataTables/templates/index.html
+++ b/DataTables/templates/index.html
@@ -91,17 +91,57 @@
 
         var table = $('#tbl').DataTable({
             destroy: true,
+            responsive: true,
             buttons: [
-                'copy', 'csv', 'excel', 'pdf', 'print',
                 {
-                    text: 'New Record',
+                    extend: 'print',
+                    exportOptions: {
+                        columns: [0, 1, 2]
+                    },
+                    text: '<i class="fa fa-print fa-2x" aria-hidden="true"></i>',
+                    titleAttr: 'Print'
+                },
+                {
+                    extend: 'copy',
+                    exportOptions: {
+                        columns: [0, 1, 2]
+                    },
+                    text: '<i class="fa fa-clipboard fa-2x" aria-hidden="true"></i>',
+                    titleAttr: 'Copy to Clipboard'
+                },
+                {
+                    extend: 'csv',
+                    exportOptions: {
+                        columns: [0, 1, 2]
+                    },
+                    text: '<img height="28" src="../public/img/csv-outline.svg" alt="CSV">',
+                    titleAttr: 'CSV'
+                },
+                {
+                    extend: 'excel',
+                    exportOptions: {
+                        columns: [0, 1, 2]
+                    },
+                    text: '<i class="fa fa-file-excel-o fa-2x" aria-hidden="true"></i>',
+                    titleAttr: 'Excel'
+                },
+                {
+                    extend: 'pdf',
+                    exportOptions: {
+                        columns: [0, 1, 2]
+                    },
+                    text: '<i class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i>',
+                    titleAttr: 'PDF'
+                }, {
                     action: function () {
                         $('#newModal').modal('toggle');
-                    }
-                }
+                    },
+                    text: '<i class="fa fa-file-o fa-2x" aria-hidden="true"></i>',
+                    titleAttr: 'New Record'
+                },
 
             ],
-            responsive: true,
+            "pagingType": "numbers",
             "ajax": {
                 "url": "/table/list",
                 "type": "POST",
@@ -115,6 +155,7 @@
                 "orderable": false
             }],
             "columns": [{
+                "width": "1%",
                 "data": "id"
             }, {
                 "data": "name"
@@ -124,13 +165,13 @@
                 "data": null,
                 "width": "1%",
                 mRender: function (data, type, row) {
-                    return '<button type="button" class="btn btn-warning" data-toggle="modal" data-target="#editModal" data-name="' + row.name + '" data-age="' + row.age + '"  data-id="' + row.id + '">Edit</button>'
+                    return '<button type="button" class="btn btn-warning" data-toggle="modal" data-target="#editModal" data-name="' + row.name + '" data-age="' + row.age + '"  data-id="' + row.id + '"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>'
                 }
             }, {
                 "data": null,
                 "width": "1%",
                 mRender: function (data, type, row) {
-                    return '<button type="button" class="btn btn-danger" onclick="deleteModal(' + row.id + ')">Delete</button>'
+                    return '<button type="button" class="btn btn-danger" onclick="deleteModal(' + row.id + ')"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>'
                 }
             }
             ]
