--- a/MVCTemplateTest/templates/index.html
+++ b/MVCTemplateTest/templates/index.html
@@ -5,7 +5,7 @@
 <body>
 <div class="container-fluid">
     <div class="row">
-        {{range .}}
+        {{range .Users}}
         {{template "user" .}}
         {{end}}
     </div>
