--- a/MVCTemplateTest/templates/_footer.html
+++ b/MVCTemplateTest/templates/_footer.html
@@ -3,4 +3,9 @@
 <script src="../public/js/jquery.min.js"></script>
 <script src="../public/js/tether.min.js"></script>
 <script src="../public/js/bootstrap.min.js"></script>
+<script>
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
+</script>
 {{end}}
