--- a/MVCTemplateTest/templates/_head.html
+++ b/MVCTemplateTest/templates/_head.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>TEST</title>
+    <title>{{.Title}}</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="public/css/bootstrap.min.css">
-    <link rel="stylesheet" href="public/css/custom.css">
 </head>
 {{end}}
